[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.1"
prost-types = "0.13.1"
serde = "1.0.204"
serde_yaml = "0.9.34"
sqlx = "0.8.0"
tonic = { version = "0.12.1", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.12.1"
