[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
axum = { version = "0.7.5", features = ["ws"] }
dashmap = "6.0.1"
futures = "0.3.30"
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
